methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:22: error: illegal start of statement (no modifiers allowed here)
  override def run()
  ^